--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -1,5 +1,5 @@
 .container{
-  margin: 7% 18% 0 18%;      
+  margin: 8%;      
   justify-content: center;
   align-items: center;
       z-index: 1;      
@@ -7,19 +7,27 @@
 }
    
 .linhaHorizontal {
-      width: 100%;
-      border: 0.05px outset rgba(144, 202, 252, 0.26);
-      margin-top: 1em;
-      margin-bottom: 1.5em;
-  }
-  
+  width: 100%;
+  border: 0.05px outset #cccccc3e;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+
+
+.voltarHome{
+  color: #959595;
+  cursor: pointer;
+  font-size: 1em;
+  margin-left: 0.1em;
+}
     
   .gridContainer {
     display: grid;
-    grid-template-columns: 25% 42% 27%; /* Alterado */
-    grid-template-rows: 40em;
-    gap: 2em;
-    color: #146b97;
+    grid-template-columns: 18% 50% 23%; /* Alterado */
+    grid-template-rows: 30em;
+    gap: 4.5em;
+    color: #747474;
     max-width: 100%;
   }
 
@@ -34,7 +42,7 @@
   .gridItemLong {
     font-size: 30px;
     text-align: center;
-    color: #146b97;  
+    color: #959595; 
     max-height: 700px;
     overflow: auto;
   }
@@ -42,7 +50,7 @@
   .gridItemLongAdm {
     font-size: 30px;
     text-align: center;
-    color: #146b97;  
+    color: #959595; 
     overflow: auto;
   }
 
@@ -75,16 +83,17 @@
 
   .titulo{
     font-weight: bold;
-    color: #146b97;
-    font-size: 25px;
+    color: #747474;
+    font-size: 1em;
     margin: 0;
-    margin-bottom: 1em;
+    margin-bottom: 1.2em;
   }
 
   .autor{
     text-align: left;
     font-size: 16px;    
-    color: #146b97;
+    color: #747474;
+    margin-bottom: 1em;
   }
 
   .editora{
@@ -129,18 +138,16 @@
   } */
 
   .buttonTipoLivroFisico:focus, .buttonTipoLivroEbook:focus{
-    background-color: #033579;
+    background-color: #747474;
     color: white;
   }
-  
-  
 
       
   .linhaHorizontalDetalhe {
     width: 100%;
-    border: 0.05px outset rgba(144, 202, 252, 0.26);
+    border: 0.05px outset #cccccc3e;
     margin-top: 0.2em;
-    margin-bottom: 0.22em;
+    margin-bottom: 0.5em;
 }
 
   .sinopse{
@@ -150,7 +157,7 @@
   }
 
   .divComprarLivros{
-    background:rgb(243, 249, 255);
+    background: #f5f5f5;
     border-radius: 15px;
     padding: 30px;
     box-shadow: 2px 2px 12px 2px rgba(1, 23, 61, 0.22);
@@ -176,7 +183,7 @@
     padding: 2px;
     flex-wrap: nowrap;
     font-size: 15px;
-    color: #033579;
+    color: #747474;
     margin-bottom: 0;
     list-style-type: none;
 
@@ -184,14 +191,15 @@
 
 
   
-  .ulCompraInfoTipo{
+.liCompraInfoTitPreco{
     font-weight: 800; 
-    color: #146b97; 
-
+    color: #747474;
+    font-size: 1.2em;
+    margin-bottom: 10px;
   }
 
   .liCompraInfoTit, .ulCompraInfoTipo{
-    font-weight: 800; 
+    font-weight: 700; 
     margin-bottom: 15px; 
     font-size: 1em; 
 
@@ -207,17 +215,18 @@
   }
 
   .liEntrega {
+    padding: 0;
     font-weight: 700; 
-    color: #4dbaf0;
+    color: #5c5c5c;
  
   }
 
 
 
   .estoque{
-    font-weight: 800; 
+    font-weight: 700; 
     font-size: 18px;
-    color: #21bbf3;
+    color:  #015a80;
   }
 
 
@@ -225,11 +234,16 @@
     width: 100%;
     height: 2.3em;
     border-radius: 10px;
-    background: #033579;
+    background-color: #015a80;
     border: none;
     margin-top: 15px;   
     cursor: pointer;
   }
+
+  .buttonCompra:hover{
+    background: #076a95;
+  }
+
 
   .h1AdicionarSacola{
     font-size: 12px;
@@ -254,9 +268,6 @@
     border: none;
   }
 
-  .buttonCompra:hover{
-    background: #033479d4;
-  }
 
   .imgFechar{
     color: aliceblue;
@@ -286,7 +297,7 @@
 
 
   .ficha{
-    border: solid 1px rgb(205, 231, 255);
+    border: solid 1px #cccccc3e ;
     border-radius: 10px;
     text-align: center;
     padding: 20px;
@@ -301,7 +312,7 @@
     padding: 7px;
     flex-wrap: nowrap;
     font-size: 17px;
-    color: #146b97;
+    color: rgb(122, 122, 122);
     border-radius: 10px;
     margin-bottom: 0;
     list-style-type: none;
@@ -314,20 +325,20 @@
   }
 
   .ficha1{
-    background:rgba(192, 225, 255, 0.448);
+    background: #cccccc3e;
   }
 
     .ficha2{
-    background:rgb(192, 225, 255);
+    background: #cccccc8e;
   }
 
 
-  .fichaH1, .fichaH1Adm,.voltarHome{
+  .fichaH1, .fichaH1Adm{
         text-align: left;
         font-size: 1.3em;
         margin-left: 0.2em;
         margin-bottom: 0.4em;
-        color: #146b97;
+        color: #959595;
   }
 
   .inputAdm, .inputAdmSinopse, .inputAdmImagem{
@@ -368,13 +379,6 @@
   .fichaInfo{
     text-align: left;
     /* margin-left: 20px; */
-  }
-
-  
-
-  .voltarHome{
-    font-size: 1em;
-
   }
 
 
@@ -586,11 +590,6 @@
   .inputAdmImagem {
     height: 3em;
   }
-
-  .voltarHome {
-    font-size: 14px;
-  }
-
 
   .buttonCardAdm {
     font-size: 16px;
