--- a/frontend/src/pages/styles/ResultadoPesquisa.module.css
+++ b/frontend/src/pages/styles/ResultadoPesquisa.module.css
@@ -4,14 +4,16 @@
 }
 
 .container{
-    margin: 0 18% 0 18%;
+    margin: 0 8% 0 8%;
 }
 
 .containerResultadoPesquisa {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2%;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    margin: 0;
+    padding: 0;
   }
+
 .resultadoContainer{
     width: 100%;
     text-decoration: none;
@@ -20,16 +22,16 @@
 }
 
 .tituloResultadoContainer {
-    margin-top: 10vh;
+    margin-top: 10%;
 }
 
 .resultadoBusca {
-    color:  #015a80;
+    color: #959595;
 }
 
 
 .resultadoCount {
-    color:  #015a80;
+    color: #959595;
     margin-top: 0.5em;
     font-weight: 400;
 
@@ -37,14 +39,14 @@
 
 .linhaHorizontal {
     width: 100%;
-    border: 0.05px outset rgba(144, 202, 252, 0.26);
+    border: 0.05px outset #cccccc3e;
     margin-top: 1em;
     margin-bottom: 1em;
 }
 
 
 .voltarHome{
-    color: #146b97; 
+    color: #959595;
     cursor: pointer;
     font-size: 1em;
     margin-left: 0.1em;
