--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -25,7 +25,7 @@
   .gridContainer {
     display: grid;
     grid-template-columns: 18% 50% 23%; /* Alterado */
-    grid-template-rows: 30em;
+    grid-template-rows: 35em;
     gap: 4.5em;
     color: #747474;
     max-width: 100%;
@@ -160,6 +160,7 @@
     background: #f5f5f5;
     border-radius: 15px;
     padding: 30px;
+    margin-bottom: 3em;
     box-shadow: 2px 2px 12px 2px rgba(1, 23, 61, 0.22);
   }
 
@@ -447,6 +448,40 @@
   height: 1.7em;
 }
   
+.gridFichaTecnica{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 9em;
+  grid-gap: 10px; 
+  margin-bottom: 100px;
+
+}
+
+.gridItemFichaTecnica {
+  background: #eaeaea40;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.iconFichaTecnica{
+  font-size: 2em;
+  color: #747474;
+  margin-bottom: 20px;
+}
+
+.tituloFichaTecnica {
+  font-size: 1em;
+  font-weight: 100;
+  color: #747474;
+  margin-bottom: 20px;
+}
+
+.infoFichaTecnica{
+  font-weight: 100;
+  color: #146b97; 
+
+}
 
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
