--- a/frontend/src/components/layout/NavBar.module.css
+++ b/frontend/src/components/layout/NavBar.module.css
@@ -1,4 +1,7 @@
-/* Estilos padrão da NavBar */
+*{
+  padding: 0;
+  margin: 0;
+}
 
 .navbar {
   position: fixed;
@@ -7,22 +10,49 @@
   align-items: center;
   background: #015a80;
   box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.4);
-  padding: 1.5% 3%;
   width: 100%;
   top: 0;
   left: 0;
   right: 0;
   z-index: 3;
+  height: 6em;
+
 }
 
-.container{
-  margin: 0 18%;
+.navbarContainerGrid {
+  display: grid;
+  grid-template-columns: 20% 45% 25% 10%;
+  grid-template-rows: 6em;
+  justify-items: center;
+  align-items: center;
+  margin: 0 8%;
+  width: calc(100% - 16%);
+}
+
+.navbarItemGrid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.navbarLogo {
+  max-width: 100%;
+  height: auto;
+  padding: 0;
+}
+
+.userButton{
+  outline: none;
+  border: none;
+  margin-top: 7px;
 }
 
 .userMenuWrapper {
   position: relative;
   background-color: #015a80;
-  width: 25%;
+
 }
 
 .center {
@@ -54,186 +84,3 @@
   color: white; /* Altere para a cor desejada */
   text-decoration: none; /* Remova a decoração de sublinhado, se desejado */
 }
-
-.userButton {
-  background-color: #015a80;
-  border: none;
-  font-size: 1em ;
-  margin: 0 5px;
-}
-
-.navbarContainerLogo {
-  margin-left: 15%;
-}
-
-.navbarContainerCompra {
-  margin: 0;
-
-}
-
-.navbarLogo {
-  height: 100%;
-}
-
-.navbarInput {
-  border: none;
-  border-radius: 5px;
-  padding: 0.5em 1em;
-  margin-left: 2em;
-}
-
-.navbarSpan {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 2.5em;
-  width: 2.5em;
-  background-color: #555;
-  color: #fff;
-  border-radius: 50%;
-  margin-left: 2em;
-  cursor: pointer;
-}
-
-/* Estilos responsivos para a NavBar */
-
-
-@media only screen and (min-width: 320px) and (max-width: 576px) {
-  .navbar {
-    flex-direction: column;
-    padding: 5%;
-  }
-
-  .navbarContainerLogo,
-  .navbarContainerCompra {
-    margin: 0;
-    width: 100%;
-    text-align: center;
-  }
-
-  .navbarLogo {
-    margin-bottom: 1em;
-    width: 40%;
-  }
-
-  .navbarInput {
-    margin: 1em 0;
-  }
-}
-
-
-@media only screen and (min-width: 577px) and (max-width: 768px) {
-  .navbar {
-    
-  }
-
-  .navbarContainerLogo,
-  .navbarContainerCompra {
-    margin: 0;
-    width: 100%;
-    text-align: center;
-  }
-
-  .navbarLogo {
-    width: 100%;
-  }
-
-  .navbarInput {
-    margin: 1em 0;
-  }
-
-  .userMenuWrapper {
-    width: 100%;
-  }
-}
-
-
-@media only screen and (min-width: 769px) and (max-width: 992px) {
-  .navbar {
-    padding: 1% 2%;
-  }
-
-  .navbarContainerLogo,
-  .navbarContainerCompra {
-padding: 0;
-    width: 30%;
-    text-align: center;
-  }
-
-  
-
-.navbarLogo {
-  height: 100%;
-}
-
-  .navbarInput {
-    margin: 0.5em 0;
-  }
-}
-
-@media only screen and (min-width: 993px) and (max-width: 1200px) {
-  .navbar {
-    padding: 1% 2%;
-  }
-
-  .navbarContainerLogo,
-  .navbarContainerCompra {
-    margin: 0;
-    width: 25%;
-    text-align: center;
-  }
-
-  .navbarLogo {
-    margin: 0.5em;
-    height: 2em;
-  }
-
-  .navbarInput {
-    margin: 0.5em 0;
-  }
-}
-
-
-@media only screen and (min-width: 1201px) and (max-width: 1440px) {
-  .navbar {
-    padding: 1% 2%;
-  }
-
-  .navbarContainerLogo,
-  .navbarContainerCompra {
-    margin: 0 5%;
-    width: 15%;
-    text-align: center;
-    padding: 0;
-  }
-
-  .navbarLogo {
-    height: 50px;
-  }
-
-  .navbarInput {
-    margin: 0.5em 0;
-  }
-}
-
-@media only screen and (min-width: 1441px) {
-  .navbar {
-    padding: 1% 2%;
-  }
-
-  .navbarContainerLogo,
-  .navbarContainerCompra {
-    margin: 0;
-    width: 15%;
-    text-align: center;
-  }
-
-  .navbarLogo {
-    height: 100%;
-  }
-  .navbarInput {
-    margin: 0.5em 0;
-  }
-}
-
-
