--- a/frontend/src/components/layout/UsuarioLogin.module.css
+++ b/frontend/src/components/layout/UsuarioLogin.module.css
@@ -1,25 +1,24 @@
 * {
   margin: 0;
   padding: 0;
-
 }
 
 .loginUser {
   display: flex;
   background-color: #015a80;
+}
 
+.divImgUser {
+  font-size: 3.3em;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
 }
 
 .login {
-  padding: 0 20px;
+  padding: 0 10px;
   text-align: left;
   background-color: #015a80;
-
-}
-
-.imgUser {
-  margin-top: 0.5vh;
-  margin-left: 15px;
 }
 
 .boasVindas {
@@ -27,31 +26,20 @@
   color: #ffffff;
   text-decoration: none;
   margin: 0;
-  margin-top: 0.5vh;
-  font-size: 0.8em;
-}
-.divImgUser{
-  font-size: 250%;
-  color: #ffffff;
+  margin-top: 0.4vh;
+  font-size: 1.3em;
 }
 
-.entre,
-.cadastreSe {
-  font-weight: bolder;
+.entreOuCadastrase,
+.ou {
+  font-weight: 100;
   color: #ffffff;
   text-decoration: none;
-  font-size: 0.8em;
-  margin: 0;
+  font-size: 1.2em;
+  margin: 0 5px 0 0;
 }
 
-.ou {
-  color: #ffffff;
-  font-size: 0.8em;
-  margin: 0 4px;
-}
-
-.entre:hover,
-.cadastreSe:hover {
+.entreOuCadastrase:hover {
   font-weight: bolder;
   color: rgb(14, 200, 225);
   text-decoration: none;
@@ -59,123 +47,75 @@
 
 /* Ajustes para telas entre 769px e 992px */
 @media only screen and (min-width: 769px) and (max-width: 992px) {
-  .imgUser {
-    margin-right: 20px;
-    margin-top: 10px;
+  .divImgUser {
+    font-size: 2.5em;
   }
 
   .boasVindas {
-    font-size: 18px;
-    margin-top: 7px;
-  }
-
-  .entre {
-    font-size: 18px;
+    font-size: 1.2em;
   }
 }
 
 /* Ajustes para telas entre 577px e 768px */
 @media only screen and (min-width: 577px) and (max-width: 768px) {
-  .imgUser {
-
-    margin-top: 8px;
-    margin-left: 10px;
+  .divImgUser {
+    font-size: 2em;
   }
 
   .boasVindas {
-    font-size: 10px;
-    margin-top: 5px;
+    font-size: 0.9em;
   }
 
-  .entre, .cadastreSe {
-    font-size: 10px;
-  }
-
-  .loginUser {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .login {
-    padding: 0 10px;
-    text-align: left;
-    width: 130px;
-  }
+  .entreOuCadastrase,
+.ou {
+  font-size: 0.8em;
+  margin: 0 5px 0 0;
+}
 }
 
 /* Ajustes para telas entre 320px e 576px */
 @media only screen and (min-width: 320px) and (max-width: 576px) {
 
-  .login{
-    width: 200px;
-    padding: 0 10px; 
-  }
-
-  .imgUser {
-    margin-right: 5px;
+  .divImgUser {
+    font-size: 2em;
     margin-top: 10px;
-    margin-left: 80px;
   }
 
   .boasVindas {
-    font-size: 15px;
-    margin-top: 10px;
+    font-size: 0.8em;
   }
 
-  .entre, .cadastreSe {
-    font-size: 12px;
-
-  }
+  .entreOuCadastrase,
+.ou {
+  font-size: 0.8em;
+  margin: 0 2px 0 0;
+}
 }
 
 /* Ajustes para telas entre 993px e 1200px */
 @media only screen and (min-width: 993px) and (max-width: 1200px) {
-
-  .login{
-    width: 200px;
-  }
-
-  .imgUser {
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-left: 15px;
+  .divImgUser {
+    font-size: 2.4em;
   }
 
   .boasVindas {
-    font-size: 15px;
-    margin-top: 10px;
+    font-size: 1em;
   }
 
-  .entre {
-    font-size: 12px;
-  }
+  .entreOuCadastrase,
+.ou {
+  font-size: 1em;
+  margin: 0 5px 0 0;
+}
 }
 
-
-@media only screen and (min-width: 1201px) and (max-width: 1440px) {
-  .login{
-    width: 200px;
-  }
-
-  .imgUser {
-    margin-right: 20px;
-    margin-top: 10px;
-    margin-left: 15px;
+/* Ajustes para telas acima de 1200px */
+@media only screen and (min-width: 1201px) {
+  .divImgUser {
+    font-size: 3.5em;
   }
 
   .boasVindas {
-    font-size: 15px;
-    margin-top: 10px;
-  }
-
-  .entre {
-    font-size: 12px;
+    font-size: 1.5em;
   }
 }
-
-
-@media only screen and (min-width: 1441px) {
-
-}
-
