--- a/frontend/src/components/cards/Card.module.css
+++ b/frontend/src/components/cards/Card.module.css
@@ -20,7 +20,6 @@
   background: whitesmoke;
   width: 250PX;
   text-align: center; 
-  text-align: center;
   height: auto;
   max-height: 450px;
 
@@ -50,6 +49,8 @@
   display: flex;
   justify-content: space-between;
   text-align: center;
+  /* background-color: #cccccc3e; */
+
 }
 
 
@@ -59,10 +60,13 @@
   width: 100%;
   color: #5a5a5a;
   margin: 0;
-  padding: 20px 0;
+  padding: 10px 0;
   height: 70px;
-  text-align: left;
+  text-align: center;
   font-weight: 100;
+  background: #cccccc1e;
+  border-radius: 5px;
+  margin-top: 7px;
 }
 
 
