--- a/frontend/src/components/modals/ModalCarrinho.module.css
+++ b/frontend/src/components/modals/ModalCarrinho.module.css
@@ -38,9 +38,9 @@
 }
 
 .navbarCesta, .sacolaH1{
-  color: aliceblue;
+  color: whitesmoke;
   font-size: 1.3em;
-  margin: 4px 0 0 0;
+  margin: 0;
 }
 
 .sacolaH1{
@@ -51,7 +51,7 @@
 
   
 .navBarCarrinho{
-  background:  #033579;
+  background: #015a80;
   width: 100%;
   height: 5vh;
   display: flex;
@@ -86,18 +86,18 @@
 
 
 .thSecao, .thSecaoInf, .thSecaoTit, .thSecaoTitN{
-  background-color: aliceblue;
+  background-color: #cccccc31;
   text-align: left;
   vertical-align: top;
   padding: 10px;
-  color: #033579;
+  color: #015a80;
 }
 
 .thSecaoTit, .thSecaoTitN{
-  background-color: aliceblue;
+  background-color: #cccccc31;;
   font-weight: 700;
   font-size: 1.2em;
-  color: #033579;
+  color: #146b97
 }
 
 .thSecaoTit{
@@ -139,13 +139,14 @@ select:focus {
 
 
 .imgFechar{
-  color: aliceblue;
+  color: white;
+  /* background-color: white; */
   font-size: 1.5em;
 }
 
 .navBarCarrinhoButton{
   border:none;
-  background:  #033579;
+  background:   #015a80;;
   cursor: pointer;
   width: 2em;
   height: 2em;
@@ -171,6 +172,8 @@ select:focus {
   color: #146b97;  
   margin: 0;
   justify-content: center;
+ 
+
 
 }
 
@@ -189,11 +192,12 @@ select:focus {
 
 .containerListaInfo{
   color: #146b97;
+
 }
 
 
 .divComprarLivros{
-  background:rgba(205, 231, 255, 0.368);
+  background: #cccccc31;
   border-radius: 0 8px 8px 0;
   box-shadow: 0 2px 15px 2px rgba(1, 23, 61, 0.078);
   display: grid;
@@ -257,7 +261,7 @@ select:focus {
 
 
 .totalCarrinho{
-  background:  #033579;
+  background:   #015a80;
   width: 100%;
   justify-content: center;
   border-radius: 7px;
@@ -281,12 +285,12 @@ select:focus {
   align-items: center;
   font-size: 15px;
   margin-top: 12px;  
-  background: rgb(192, 225, 255);
+  background: #dadada;
 }
 
 .carrinhoButtonComprar:hover{
   cursor: pointer;
-  background: aliceblue;
+  background: #cccccc31;;
   text-decoration: none;
   color: #146b97bc;  
 }
@@ -385,7 +389,7 @@ span{
   width: 100%;
   height: 2.3em;
   border-radius: 10px;
-  background: #033579;
+  background: #015a80;
   border: none;
   margin-top: 15px;   
   cursor: pointer;
@@ -401,13 +405,13 @@ span{
 
 
 .h2AdicionarSacola{
-  color: #033479d4; 
+  color: #146b97; 
  text-align: center;  
   font-weight: bold;
 }
 
 .buttonFecharModal{
-  background:#033479d4;
+  background: #015a80;
   border-radius: 50%;
   width: 2em;
   height: 1.7em;
@@ -415,11 +419,11 @@ span{
 }
 
 .buttonCompra:hover{
-  background: #033479d4;
+  background: #015a8078;
 }
 
 .imgFechar{
-  color: aliceblue;
+  color: #cccccc31;;
   margin-top: 4px;
 }
 
@@ -434,7 +438,7 @@ span{
   }
 
   .thSecao, .thSecaoInf, .thSecaoTit, .thSecaoTitN{
-    background-color: aliceblue;
+    background-color: #cccccc31;;
     text-align: left;
     vertical-align: top;
     padding: 10px;
@@ -442,7 +446,7 @@ span{
   }
   
   .thSecaoTit, .thSecaoTitN{
-    background-color: aliceblue;
+    background-color: #cccccc31;;
     font-weight: 700;
     font-size: 0.9em;
     width: 9em;
