--- a/frontend/src/pages/styles/Contact.module.css
+++ b/frontend/src/pages/styles/Contact.module.css
@@ -4,25 +4,27 @@
 }
 
 .container {
-  margin: 0 18%;
+  margin: 0 8%;
 }
 
 a:link {
   text-decoration: none;
 }
 
-.voltarHome {
-  color: #146b97;
-  cursor: pointer;
-  margin-top: 12vh;
-  margin-left: 0.5vh;
-  font-size: 1em;
-}
-
 .linhaHorizontal {
   width: 100%;
-  border: 0.05px outset rgba(144, 202, 252, 0.26);
-  margin-top: 2em;
+  border: 0.05px outset #cccccc3e;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+
+.voltarHome{
+  color: #959595;
+  cursor: pointer;
+  font-size: 1em;
+  margin-top: 12vh;
+  margin-left: 0.1em;
 }
 
 .formContact {
@@ -31,15 +33,15 @@ a:link {
   align-items: flex-start; /* Alinhar os labels à esquerda */
   justify-content: center;
   border-radius: 0.5rem;
-  border-color: #146b97;
+  border-color: none;
   margin: 50px auto;
-  padding: 20px;
-  color: #146b97;
-  background: rgb(207, 233, 255);
+  padding: 30px 100px ;
+  color: #747474;
+  background: #cccccc3e;
   width: 100%;
 
   /* Responsividade */
-  max-width: 500px; /* Defina o tamanho máximo para evitar que o formulário fique muito largo */
+  max-width: 800px; /* Defina o tamanho máximo para evitar que o formulário fique muito largo */
 }
 
 .formContactLabel {
@@ -48,19 +50,18 @@ a:link {
   font-size: 1.2rem;
   line-height: 2rem;
   font-weight: bold;
-  border-color: #146b97;
+  border: none;
 }
 
 .formContactInput,
 .formContactTextArea {
   width: 100%;
   border-radius: 0.25rem;
-  border: 1px solid #146b97;
   margin-bottom: 0.8rem;
   font-size: inherit;
-  color: #033579;
-  background: aliceblue;
+  color: #747474;
   padding: 10px;
+  border: none;
 }
 
 .formContactInput {
@@ -77,16 +78,18 @@ a:link {
 .formContactButton {
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  background: #033579;
+  background: #959595;
   color: #ffffff;
   border: none;
   cursor: pointer;
-  width: 30%;
+  width: 50%;
+  height: 40px;
   text-align: center;
   font-weight: bold;
+  font-size: 18px;
 }
 
 .formContactButton:hover {
   color: #fbf4f4;
-  background-color: rgb(144, 202, 252);
+  background: #bebebe;
 }
