--- a/frontend/src/components/adm/CadastroLivro.module.css
+++ b/frontend/src/components/adm/CadastroLivro.module.css
@@ -5,7 +5,7 @@
 }
 
 .tituloCadastroLivro {
-  color: #146b97;
+  color: #959595;
 }
 
 .linhaHorizontalCadastro {
@@ -17,12 +17,12 @@
 
 .buttonExpandir,
 .buttonCadastrar {
-  color: #146b97;
+  color: white;
   font-size: 20px;
   font-weight: bold;
   height: 2em;
   width: 15em;
-  background: rgb(205, 231, 255);
+  background: #146b97b2;
   margin-top: 20px;
   border: none;
   border-radius: 7px;
@@ -32,7 +32,7 @@
 
 .buttonExpandir:hover,
 .buttonCadastrar:hover {
-  background-color: #033579;
+  background-color: #146b97;
   color: white;
 }
 
