--- a/frontend/src/components/adm/ListaPedido.module.css
+++ b/frontend/src/components/adm/ListaPedido.module.css
@@ -5,17 +5,17 @@
   }
 
   .tituloListarPedido {
-    color: #146b97;
+    color: #959595;
     margin-top: 2%;
   }
 
 .buttonExpandir {
-  color: #146b97;
+  color: white;
   font-size: 20px;
   font-weight: bold;
   height: 2em;
   width: 15em;
-  background: rgb(205, 231, 255);
+  background: #146b97b2;
   margin-top: 20px;
   border: none;
   border-radius: 7px;
@@ -24,7 +24,7 @@
 }
 
 .buttonExpandir:hover{
-  background-color: #033579;
+  background-color: #146b97;
   color: white;
 }
 
