--- a/frontend/src/components/cards/Card.module.css
+++ b/frontend/src/components/cards/Card.module.css
@@ -110,12 +110,12 @@
 }
 
 .buttonCardAdm{
-  color: #146b97; 
+  color: white;
   font-size: 14px;
   font-weight: bold;
   height: 2em;
   width: 4.5em;
-  background:rgb(205, 231, 255);
+  background: #146b97b2;
   margin: 5px 0 5px 0;
   border: none;
   border-radius: 7px;
@@ -123,7 +123,7 @@
 }
 
 .buttonCardAdm:hover{
-  background-color: #033579;
+  background-color: #146b97;
   color: white;
 }
 
