--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -108,12 +108,12 @@
 }
   
  .buttonTipoLivroFisico, .buttonTipoLivroEbook{
-    color: #146b97; 
+  color: white;
     font-size: 14px;
     font-weight: bold;
     height: 4em;
 
-    background:rgb(205, 231, 255);
+    background: #146b97b2;
     margin: 5px 0 5px 0;
     border: none;
     border-radius: 7px;
@@ -138,7 +138,7 @@
   } */
 
   .buttonTipoLivroFisico:focus, .buttonTipoLivroEbook:focus{
-    background-color: #747474;
+    background-color: #747474a2;
     color: white;
   }
 
@@ -424,19 +424,19 @@
 }
 
 .buttonCardAdm{
-  color: #146b97; 
+  color: white;
   font-size: 20px;
   font-weight: bold;
   height: 2em;
   width: 15em;
-  background:rgb(205, 231, 255);
+  background: #146b97b2;
   margin: 5px 0px 5px 50px;
   border: none;
   border-radius: 7px;
 }
 
 .buttonCardAdm:hover{
-  background-color: #033579;
+  background-color: #146b97;
   color: white;
 }
 
