--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -5,6 +5,10 @@
       z-index: 1;      
       text-shadow: 5px 5px 15px rgba(1, 23, 61, 0.22)
 }
+
+.teste{
+  background: #015a80;
+}
    
 .linhaHorizontal {
   width: 100%;
