decrementando do estoque

--- a/frontend/src/components/modals/ModalCarrinho.module.css
+++ b/frontend/src/components/modals/ModalCarrinho.module.css
@@ -292,7 +292,7 @@ select:focus {
   cursor: pointer;
   background: #cccccc31;;
   text-decoration: none;
-  color: #146b97bc;  
+  color: white;  
 }
 
 
