--- a/frontend/src/components/buttons/Button.module.css
+++ b/frontend/src/components/buttons/Button.module.css
@@ -7,7 +7,15 @@
       padding: 0.5rem;
       width: 4vh;
       height: 4vh;
+      
     }
+
+    
+  .navbarButton {
+display: flex;      
+    }
+
+
     
   .iconFavorito{
       font-size: 1.5em;
@@ -18,7 +26,10 @@
     font-size: 1.3em;
   }
 
-
+.cartCount{
+  color: white;
+  font-size: 1em;
+}
 
 /* Ajustes para telas entre 320px e 576px */
 @media only screen and (min-width: 320px) and (max-width: 576px) {
