--- a/frontend/src/components/modals/ModalFavoritos.module copy.css
+++ b/frontend/src/components/modals/ModalFavoritos.module copy.css
@@ -3,7 +3,18 @@
   padding: 0;
   box-sizing: none;
 }
+.modalFavoritoContainer{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 
+}
 
 .modalBackground {
   position: fixed;
@@ -41,6 +52,7 @@
   text-decoration: none;
   border-radius: 7px;
 }
+
 
 .iconFavorito{
   color: aliceblue;
