--- a/frontend/src/components/layout/NavBar.module.css
+++ b/frontend/src/components/layout/NavBar.module.css
@@ -21,7 +21,7 @@
 
 .navbarContainerGrid {
   display: grid;
-  grid-template-columns: 20% 35% 25% 8%;
+  grid-template-columns: 20% 40% 25% 7.5% 7.5%;
   grid-template-rows: 6em;
   justify-items: center;
   align-items: center;
