--- a/frontend/src/components/modals/Modal.module.css
+++ b/frontend/src/components/modals/Modal.module.css
@@ -5,7 +5,7 @@
 }
 
 
-.modalCarrinhoContainer {
+.modalCarrinhoContainer, .modalFavoritoContainer {
   position: fixed;
   top: 0;
   right: 0;
@@ -17,6 +17,7 @@
   border-radius: 10px;
 }
 
+
 .modalBackground {
   position: fixed;
   top: 0;
@@ -27,7 +28,7 @@
   z-index: 99;
 }
 
-.modalCarrinho {
+.modalCarrinho, .modalFavorito {
   position: fixed;
   width: 100%;
   max-height: 80vh;
@@ -36,6 +37,51 @@
   border-radius: 10px;
   padding: 20px;
   z-index: 999;
+}
+
+.modalFavorito {
+  width: 40%;
+  max-height: 100vh;
+
+}
+.containerCard {
+  display: inline-block;   
+  justify-content: space-between;
+  text-decoration: none;  
+  margin: 30px;
+  height: auto;
+  margin-left: 30px;
+  max-height: 500px;
+}
+
+.card{
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 5px rgba(1, 23, 61, 0.22);
+  padding: 15px 45px;
+  transition: all 0,3s ease-out;
+  background: whitesmoke;
+  width: 250PX;
+  text-align: center; 
+  height: auto;
+  max-height: 450px;
+
+}
+
+.cardImageLivro {
+  width: 100%;
+  max-height: 200px;
+}
+
+
+
+.cardTitulo {
+  height: 2vh;
+  text-align: center;
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+
 }
 
 .navbarCesta, .sacolaH1{
@@ -51,7 +97,7 @@
 }  
 
   
-.navBarCarrinho{
+.navBarCarrinho, .navBarFavorito{
   background: #015a80;
   width: 100%;
   height: 5vh;
@@ -69,7 +115,7 @@
   margin-bottom: 1.5em;
 }
 
-.navBarCarrinhoUl{
+.navBarCarrinhoUl, .navBarFavoritoUl{
   display: flex;
   margin: 0 0 0 1em;
   padding: 0;
@@ -145,7 +191,7 @@ select:focus {
   font-size: 1.5em;
 }
 
-.navBarCarrinhoButton{
+.navBarCarrinhoButton, .navBarfavoritoButton{
   border:none;
   background:   #015a80;;
   cursor: pointer;
@@ -160,7 +206,12 @@ select:focus {
   overflow-y: scroll; 
 }
 
-.listaItemCarrinho{
+.bodyListaFavorito{
+  height: 60vh;
+  overflow-y: scroll; 
+}
+
+.listaItemCarrinho, .listaItemFavorito{
   width: 100%;
 
 }
@@ -173,23 +224,32 @@ select:focus {
   color: #146b97;  
   margin: 0;
   justify-content: center;
- 
 
+}
+
+.containerListaFavorito {
+  display: flex;
+  padding: 20px;
+  color: #146b97;  
+  margin: 0;
+  width: 15em;
+  height: 18em;
+  justify-content: center;
+  background-color: #555;
+  border-radius: 5px;
 
 }
 
 .divImg{
   justify-content: center;
-
+  width: 10em;
 }
 
 .imagemGrid{
   box-shadow: 2px 2px 15px 0 rgba(1, 23, 61, 0.078);
   border-radius: 8px 0 0 8px;
   width: 100%;
-  height: 9em;
 }
-
 
 .containerListaInfo{
   color: #146b97;
@@ -216,7 +276,7 @@ select:focus {
   font-weight: 600;
 } 
 
-.imgExcluirItemCarrinho{
+.imgExcluirItemCarrinho, .imgExcluirItemFavorito{
   font-size: 1em;
   text-decoration: none;
   border: none;
@@ -224,6 +284,17 @@ select:focus {
   background:rgba(205, 231, 255, 0.766);
   margin-left: 7%;
 }
+
+.imgExcluirItemFavorito{
+  background:whitesmoke;
+  font-size: 1.5rem;
+  margin-top: 15px;
+}
+
+.imgExcluirItemFavorito:hover{
+  cursor: pointer;
+  color: #5d5d5d; 
+} 
 
 .imgExcluirItemCarrinho:hover{
   cursor: pointer;
