--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -72,12 +72,23 @@
     align-items: center;
   }
 
-
-
- .tituloFavorito{
+.divTituloFavorito{
   display: flex;
-  justify-content: space-between;
- } 
+  justify-content: right;
+  margin-right: 20px;
+  font-size: 1em;
+}
+
+.tituloFavorito{
+  color: #747474;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.tituloFavorito:hover{
+  color: #146b97;
+  font-size: 1.5em;
+}
 
   .imagemLivro{
     border-radius: 10px;
@@ -158,7 +169,7 @@
     text-align: justify;
     font-weight: 400;
     color: #747474;
-  font-size: 0.7em; 
+  font-size: 0.55em; 
 
   }
 
