--- a/frontend/src/pages/styles/PerfilUsuario.module.css
+++ b/frontend/src/pages/styles/PerfilUsuario.module.css
@@ -1,127 +1,112 @@
-.container{
-    margin: 7% 18% 0 18%;      
-    justify-content: center;
-    align-items: center;
-        z-index: 1;      
-        text-shadow: 5px 5px 15px rgba(1, 23, 61, 0.22)
-  }
-     
-  .linhaHorizontal {
-        width: 100%;
-        border: 0.05px outset rgba(144, 202, 252, 0.26);
-        margin-top: 1em;
-        margin-bottom: 1.5em;
-    }
-
-    .voltarHome {
-        color: #146b97;
-        cursor: pointer;
-        margin-top: 12vh;
-        margin-left: 0.5vh;
-        font-size: 1em;
-      }
-      
-.containerGridPerfil{
-    display: grid;
-    grid-template-columns: 30% 65%; 
-    grid-template-rows: 42em;
-    gap: 5%;
-    color: #146b97;
-    max-width: 100%;
+.container {
+  margin: 7% 18% 0 18%;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  text-shadow: 5px 5px 15px rgba(1, 23, 61, 0.22);
 
 }
 
-.gridPerfil{
-    padding: 8% 10%;
-    background-color:aliceblue;
+.linhaHorizontal, .linhaHorizontalForm {
+  width: 100%;
+  border: 0.05px outset rgba(144, 202, 252, 0.26);
+  margin-top: 1em;
+  margin-bottom: 1.5em;
 }
 
-.gridPerfilLista{
-    list-style: none;
-
+.linhaHorizontalForm {
+  margin: 0;
+  margin-bottom: 1.5em;
 }
 
-.gridPerfilListaItem{
-    background-color:aliceblue;
-    padding: 5%;
+
+.voltarHome {
+  color: #146b97;
+  cursor: pointer;
+  margin-top: 12vh;
+  margin-left: 0.5vh;
+  font-size: 1em;
 }
 
-.gridPerfilForm{
-    background-color:aliceblue;
-    padding: 8% 15%;
-    border-radius: 10px;
+.containerGridPerfil {
+  display: grid;
+  grid-template-columns: 35% 50%;
+  grid-template-rows: auto;
+  gap: 5%;
+  color: #646464;
+  max-width: 100%;
+justify-content: center;
+}
+
+.gridPerfil {
+  padding: 8% 10%;
+  background-color: aliceblue;
+}
+
+.gridPerfilLista {
+  list-style: none;
+}
+
+.gridPerfilListaItem {
+  background-color: aliceblue;
+  padding: 5%;
+  list-style: none;
+  text-decoration: none;
+}
+
+.gridPerfilForm {
+  background-color: aliceblue;
+  padding: 2% 15%;
+  border-radius: 10px;
 }
 
 .iconContainer {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5%;
-    width: 100%;
-    background-color: white;
-    border-radius: 5px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: #ccc ;
+  border-radius: 5px;
+  width: 100%;
+}
 
-  }
-  
-  .iconFormLogin {
-    margin: 0 15px;
-    border-radius: 5px;
-  }
-  
-  .imagemPerfil{
-    font-size: 7vh;
-  }
-  
-  .inputFormLogin, .inputCadastrarEndereco {
-    padding: 2.5%;
-    border: none;
-    border-radius: 5px;
-    width: 100%;
-    background-color: white;
-  }
+.inputForm {
+  padding: 8px;
+  border: none;
+  width: 100%;
+  background-color: #cccccc89;
+  border-radius: 5px;
 
-  .inputFormLogin:focus, .inputCadastrarEndereco:focus{
-    outline: none;
-  }
+}
 
-  .inputCadastrarEndereco {
-    border-radius: 5px;
-    margin-bottom: 3%;
+.inputForm:focuss{
+  outline: none;
+}
 
+.iconFormLabel{
+  margin: 0 10px;
+}
 
-  }
+.active{
+  background-color: #cccccc89;
+}
 
+.buttonSalvarPerfil{
+  margin-bottom: 5%;
+}
 
-  
-  .alternarSenha svg {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-  }
+.buttonExpandirSenha, .buttonSalvarPerfil{
+  background-color: #146b978e;
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  height: 2em;
+  margin-top: 10px;
+  cursor: pointer;
+  color: white;
+}
 
-  
-  .buttonSalvarPerfil, .buttonExpandirSenha {
-    color: white;
-    background-color: #015a80;
-    padding: 8px 50px;
-    text-align: center;
-    border: none;
-    border-radius: 7px;
-    cursor: pointer;
-  }
-
-  .buttonSalvarPerfil:hover, .buttonExpandirSenha{
-    color: rgb(240, 248, 255);
-    background-color: #015a80e5;
-  }
-
-  .buttonExpandirSenha{
-    margin-bottom: 5%;
-  }
-
-  .active {
-    background-color: #f0f0f0;
-    /* Adicione outros estilos de destaque aqui */
-  }
-
-  
-  
+.buttonExpandirSenha:hover, .buttonSalvarPerfil.buttonExpandirSenha:hover,.buttonSalvarPerfil:hover{
+  background-color: #146b97;
+  color: whitesmoke;
+}
