--- a/frontend/src/components/adm/ListaPedido.module.css
+++ b/frontend/src/components/adm/ListaPedido.module.css
@@ -38,48 +38,58 @@
   padding: 5px 10px;
 }
 
-
 .containerCadastroLivro {
-    margin: 0;
-  }
-  
-  .tituloListarPedido {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .linhaHorizontal {
-    border-top: 1px solid #ccc;
-    margin: 20px 0;
-  }
-  
-  .buttonExpandir {
-    margin-bottom: 10px;
-  }
-  
-  .tableListarPedido {
-    width: 100%;
-    border-collapse: collapse;
-    color: #146b97;
-  }
-  
-  .thListarPedido, .tdListarPedido {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #146b97;
-  }
-  
- .thListarPedido {
-    background-color: aliceblue;
-  }
-  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .ulListarPedido {
-    margin-bottom: 5px;
-  }
-  
+  padding: 20px;
+  border: 1px solid #ccc;
+}
+
+.tituloListarPedido {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.linhaHorizontal {
+  height: 1px;
+  background-color: #ccc;
+  margin-bottom: 20px;
+}
+
+.buttonExpandir {
+  margin-bottom: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+
+}
+
+th, td {
+  padding: 8px;
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+  color: #959595;
+  text-align: center;
+}
+
+td{
+  color: #146b97;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 5px;
+}
+
+ul ul {
+  margin-left: 20px;
+}
