--- a/frontend/src/pages/styles/PerfilUsuario.module.css
+++ b/frontend/src/pages/styles/PerfilUsuario.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 7% 18% 0 18%;
+  margin: 7% 8% 0 8%;
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -30,35 +30,42 @@
 
 .containerGridPerfil {
   display: grid;
-  grid-template-columns: 35% 50%;
+  grid-template-columns: 20% minmax(45%, auto);
   grid-template-rows: auto;
-  gap: 5%;
+  gap: 2%;
   color: #646464;
   max-width: 100%;
-justify-content: center;
+  justify-content: center;
 }
+
+
 
 .gridPerfil {
   padding: 8% 10%;
   background-color: aliceblue;
+  border-radius: 5px;
 }
 
 .gridPerfilLista {
   list-style: none;
+  padding: 2% 5%;
 }
+
 
 .gridPerfilListaItem {
   background-color: aliceblue;
-  padding: 5%;
+  padding: 2% 5%;
   list-style: none;
   text-decoration: none;
 }
 
 .gridPerfilForm {
   background-color: aliceblue;
-  padding: 2% 15%;
-  border-radius: 10px;
+  padding: 2% 5%;
+  border-radius: 5px;
 }
+
+
 
 .iconContainer {
   display: flex;
@@ -109,4 +116,45 @@ justify-content: center;
 .buttonExpandirSenha:hover, .buttonSalvarPerfil.buttonExpandirSenha:hover,.buttonSalvarPerfil:hover{
   background-color: #146b97;
   color: whitesmoke;
+}
+
+.tabelaPedidoTh, .tabelaPedidoTr, .tabelaPedidoTd{
+  text-align: center;
+  padding: 3px;
+}
+
+.tabelaPedidoTr{
+  text-align: center;
+
+}
+
+
+.tabelaPedidoTd{
+
+  text-align: center;
+}
+
+.divPedidoImg{
+  width: 60px;
+}
+
+.pedidoImg{
+width: 100%;
+}
+
+
+.tabelaPedidoImg{
+ width: 100%;
+
+}
+
+.listaPedidoLi{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3px ;
+}
+
+.tablePedido{
+  font-size: 0.8em;
 }
