--- a/frontend/src/pages/styles/PerfilUsuario.module.css
+++ b/frontend/src/pages/styles/PerfilUsuario.module.css
@@ -57,6 +57,7 @@
   padding: 2% 5%;
   list-style: none;
   text-decoration: none;
+  border-radius: 5px;
 }
 
 .gridPerfilForm {
@@ -75,6 +76,10 @@
   background-color: #ccc ;
   border-radius: 5px;
   width: 100%;
+}
+
+.iconPerfil{
+  font-size: 3em;
 }
 
 .inputForm {
