--- a/frontend/src/components/adm/ListaPedido.module.css
+++ b/frontend/src/components/adm/ListaPedido.module.css
@@ -1,13 +1,13 @@
 .linhaHorizontalCadastro {
-    width: 100%;
-    border: 0.05px outset rgba(144, 202, 252, 0.26);
-    margin-top: 1em;
-  }
+  width: 100%;
+  border: 0.05px outset rgba(144, 202, 252, 0.26);
+  margin-top: 1em;
+}
 
-  .tituloListarPedido {
-    color: #959595;
-    margin-top: 2%;
-  }
+.tituloListarPedido {
+  color: #959595;
+  margin-top: 2%;
+}
 
 .buttonExpandir {
   color: white;
@@ -23,8 +23,8 @@
   cursor: pointer;
 }
 
-
-.buttonExpandir:hover, .paginacaoButton:hover{
+.buttonExpandir:hover,
+.paginacaoButton:hover {
   background-color: #146b97;
   color: white;
 }
@@ -55,14 +55,13 @@
   margin-bottom: 20px;
 }
 
-
 table {
   width: 100%;
   border-collapse: collapse;
-
 }
 
-th, td {
+th,
+td {
   padding: 8px;
   border-bottom: 1px solid #ccc;
   text-align: left;
@@ -70,7 +69,7 @@ th, td {
   text-align: center;
 }
 
-td{
+td {
   color: #146b97;
 }
 
@@ -92,12 +91,12 @@ ul ul {
   margin-left: 20px;
 }
 
-.listaPedidoLi{
+.listaPedidoLi {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.listaPedidoLiDiv{
+.listaPedidoLiDiv {
   margin: 0 15px;
-  }
+}
