--- a/frontend/src/components/adm/ListaPedido.module.css
+++ b/frontend/src/components/adm/ListaPedido.module.css
@@ -55,6 +55,10 @@
   margin-bottom: 20px;
 }
 
+.tableContainer {
+  overflow-x: auto;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -99,4 +103,19 @@ ul ul {
 
 .listaPedidoLiDiv {
   margin: 0 15px;
+}
+
+@media only screen and (max-width: 768px) {
+  .buttonExpandir {
+    width: 100%;
+  }
+
+  .tableContainer {
+    overflow-x: auto;
+    max-width: 100%;
+  }
+  
+  .inputCadastrar {
+    max-width: 400px;
+  }
 }
