--- a/frontend/src/components/cards/Card.module.css
+++ b/frontend/src/components/cards/Card.module.css
@@ -157,7 +157,7 @@
 @media only screen and (min-width: 1201px) and (max-width: 1440px) {
 
   .card, .cardAdm {
-    width: 80%;
+    width: 100%;
   }
 
   .containerCard, .containerCardAdm{
@@ -168,11 +168,12 @@
     
 .h2TituloCard, .h2TituloCardAdm{
   font-size: 0.9rem;
+  padding: 0;
 }
 
-.tituloTipoLivro{
+.card .tituloTipoLivro{
   margin-top: 10px;
-  font-size:0.7rem;
+  font-size:0.8rem;
   color: #146b97;
 }
 
@@ -188,7 +189,7 @@
 .precoOferta, .precoRegular{
   color: #146b97; 
   margin: 0 5px;
-  font-size: 14px;
+  font-size:0.7rem;
 }
  
 }
@@ -196,38 +197,57 @@
  
 @media only screen and (min-width: 577px) and (max-width: 768px) {
 
-  .card, .cardAdm {
-    width: 70%;
+  .card {
+    width: 100%;
+    margin: 5px;
+    padding: 10px;
   }
 
+  .cardAdm {
+    width: 80%;
+    margin: 5px;
+    padding: 10px;
+  }
   .containerCard, .containerCardAdm{
     margin: 20px;
 
   }
 
+  .buttonCardAdm{
+    width: 4em;
+    margin: 5px 5px;
+    font-size: 13px;
+  }
+
+
+
     
 .h2TituloCard, .h2TituloCardAdm{
   font-size: 0.8rem;
-  
+  padding: 0;
+  height: 75px;
 }
 
-.tituloTipoLivro{
+.card .tituloTipoLivro{
+  margin-top: 10px;
   font-size:0.6rem;
   color: #146b97;
-  margin: 0 7px;
+  height: 10px;
 }
 
 
 .precoAntigo{
   margin: 0 5px;
-  height: 0.9em;
+  height: 1em;
   font-size: 12px;
+  font-weight: 600;
 
 }
 
 .precoOferta, .precoRegular{
-  margin: 0 7px;
-  font-size: 12px;
+  color: #146b97; 
+  margin: 0;
+  font-size:0.7rem;
 }
 
 
@@ -243,7 +263,9 @@
 @media only screen and (min-width: 993px) and (max-width: 1200px) {
 
   .card, .cardAdm {
-    width: 80%;
+    width: 100%;
+    margin: 5px;
+    padding: 10px;
   }
 
   .containerCard, .containerCardAdm{
@@ -253,13 +275,16 @@
 
     
 .h2TituloCard, .h2TituloCardAdm{
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+  padding: 0;
+  height: 70px;
 }
 
-.tituloTipoLivro{
+.card .tituloTipoLivro{
   margin-top: 10px;
-  font-size:0.7rem;
+  font-size:0.6rem;
   color: #146b97;
+  height: 10px;
 }
 
 
@@ -267,13 +292,14 @@
   margin: 0 5px;
   height: 1em;
   font-size: 12px;
+  font-weight: 600;
 
 }
 
 .precoOferta, .precoRegular{
-  margin: 0 5px;
-  font-size: 14px;
+  color: #146b97; 
+  margin: 0;
+  font-size:0.7rem;
 }
-
-
+ 
 }
