--- a/frontend/src/components/layout/UsuarioLogin.module.css
+++ b/frontend/src/components/layout/UsuarioLogin.module.css
@@ -78,18 +78,21 @@
 @media only screen and (min-width: 320px) and (max-width: 576px) {
 
   .divImgUser {
-    font-size: 2em;
-    margin-top: 10px;
+    font-size: 1.3em;
+    margin-top: 4px;
+    margin-right:0;
+
   }
 
   .boasVindas {
-    font-size: 0.8em;
+    font-size: 0.6em;
+    margin-left: 0;
   }
 
   .entreOuCadastrase,
 .ou {
-  font-size: 0.8em;
-  margin: 0 2px 0 0;
+  font-size: 0.6em;
+  margin: 0 0 0 0;
 }
 }
 
